# rs-pedalboard

./: Cargo.toml  features.md
custom_egui_dnd/: Cargo.toml
custom_egui_dnd/src/: item.rs  item_iterator.rs  lib.rs  state.rs
src/: audio_devices.rs  file_processor.rs  lib.rs  main.rs  pedalboard.rs  pedalboard_set.rs  processor_api.rs  processor_settings.rs  server_settings.rs  set.rs  socket_helper.rs
src/dsp_algorithms/: biquad.rs  delay.rs  eq.rs  frequency_analysis.rs  impluse_response.rs  mod.rs  moving_bandpass.rs  moving_bangpass.rs  oscillator.rs  phase_vocoder.rs  psola.rs  resampler.rs  variable_delay.rs  variable_delay_phaser.rs  yin.rs
src/pedals/: autowah.rs  bypass_pedal.rs  chorus.rs  compressor.rs  delay.rs  distortion.rs  eq.rs  fuzz.rs  impulse_response.rs  info.rs  mod.rs  modulation.rs  nam.rs  noise_gate.rs  overdrive.rs  pitch_shift.rs  reverb.rs  tremolo.rs  tuner.rs  ui.rs  vibrato.rs  volume.rs  vst2.rs  wah.rs
src/plugin/: mod.rs  vst2.rs
src/plugin/vst3/: handler.rs  mod.rs
