[package]
name = "rs-pedalboard"
version = "0.1.0"
edition = "2021"

[features]
server = ["dep:regex", "dep:clap"]
client = ["dep:egui_extras", "dep:image", "dep:egui_dnd", "dep:which", "dep:sysinfo"]

[[bin]]
name = "server"
path = "src/bin/server/bin.rs"
required-features = ["server"]

[[bin]]
name = "client"
path = "src/bin/client/bin.rs"
required-features = ["client"]

[dependencies]
log = "0.4.26"
cpal = { version = "0.15.3", features=["jack", "asio"] }
simplelog = "0.12.2"
ringbuf = "0.4.7"
regex = { optional=true, version = "^1.11.1" }
crossbeam = { version = "0.8.4" }
serde = { version = "^1.0.219", features=["derive"] }
serde_json = "^1.0"
enum_dispatch = "0.3.13"
eframe = { version="0.31.1", features=["persistence"] }
signalsmith-stretch = "0.1.1"
egui_extras = { optional=true, version = "0.31.1", features=["image"] }
image = { optional=true, version = "0.25.6", features = ["png"] }
egui_dnd = { optional = true, path = "custom_egui_dnd" }
strum = "0.27"
strum_macros = "0.27"
neural-amp-modeler-core-bindgen = { git = "https://github.com/Si1veR123/rs-neural-amp-modeler-core.git" }
homedir = "0.3.4"
realfft = "3.4.0"
hound = "^3.5.1"
libloading = "0.8.8"
vst3 = "0.1.2"
winit = "0.30.11"
vst2 = "0.0.1"
egui_plot = "0.32.1"
num-complex = "0.4.6"
clap = { version = "4.5.40", optional=true, features=["derive"] }
which = { version = "8.0.0", optional=true }
sysinfo = { version = "0.35.2", optional = true }