[package]
name = "rs-pedalboard"
version = "0.1.0"
edition = "2021"

[features]
server = ["dep:clap"]
client = ["dep:egui_extras", "dep:image", "dep:egui_dnd", "dep:which", "dep:sysinfo", "dep:chrono"]
virtual_keyboard = ["dep:egui_keyboard"]
log_full_commands = []

[[bin]]
name = "server"
path = "src/bin/server/bin.rs"
required-features = ["server"]

[[bin]]
name = "client"
path = "src/bin/client/bin.rs"
required-features = ["client"]

[dependencies]
log = "0.4.27"
cpal = { version = "0.15.3", features=["jack", "asio"] }
simplelog = "0.12.2"
ringbuf = "0.4.8"
regex = "1.11.2"
crossbeam = { version = "0.8.4" }
serde = { version = "^1.0.219", features=["derive"] }
serde_json = "^1.0"
enum_dispatch = "0.3.13"
eframe = { version="0.32.1", features=["persistence"] }
signalsmith-stretch = "0.1.1"
egui_extras = { optional=true, version = "0.32.1", features=["image"] }
image = { optional=true, version = "0.25.6", features = ["png"] }
egui_dnd = { optional = true, path = "custom_egui_dnd" }
strum = "0.27"
strum_macros = "0.27"
neural-amp-modeler-core-bindgen = { git = "https://github.com/Si1veR123/rs-neural-amp-modeler-core.git" }
homedir = "0.3.6"
realfft = "3.5.0"
hound = "^3.5.1"
libloading = "0.8.8"
vst3 = "0.1.2"
winit = "0.30.12"
vst = "0.0.1"
egui_plot = "0.33.0"
num-complex = "0.4.6"
clap = { version = "4.5.46", optional=true, features=["derive"] }
which = { version = "8.0.0", optional=true }
sysinfo = { version = "0.35.2", optional = true }
chrono = { version = "0.4.41", optional = true }
freeverb = "0.1.0"
ordered-float = { version = "5.0.0", features = ["serde"] }
rubato = "0.16.2"
smol = { version = "2.0.2" }
futures = { version = "0.3.31" }
midir = { version = "0.10.2", features = ["jack"] }
egui_keyboard = { git = "https://github.com/Si1veR123/egui_keyboard.git", optional = true }