[package]
name = "egui_dnd"
version = "0.12.0"
edition = "2021"
authors = ["Lucas Meurer"]
repository = "https://github.com/lucasmerlin/hello_egui/tree/main/crates/egui_dnd"
homepage = "https://lucasmerlin.github.io/hello_egui/"
keywords = ["egui", "drag", "drop", "ui", "gui"]
categories = ["gui"]
description = "A drag and drop library for egui"
license = "MIT"


[dependencies]
egui_animation = "0.9.0"
simple-easing = "1.0.1"

color-hex = "0.2.0"
egui = "0.32.1"
eframe = "0.32.1"
